syntax = "proto3";

package resources.documents;

import "buf/validate/validate.proto";
import "resources/common/content/content.proto";
import "resources/documents/category.proto";
import "resources/documents/pins.proto";
import "resources/documents/workflow.proto";
import "resources/file/file.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/documents;documents";

message Document {
  int64 id = 1;
  resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  optional int64 category_id = 5;
  optional resources.documents.Category category = 6 [(tagger.tags) = "alias:\"category\""];
  // @sanitize
  string title = 7 [(buf.validate.field).string = {
    min_len: 3
    max_len: 512
  }];
  resources.common.content.ContentType content_type = 8 [(buf.validate.field).enum.defined_only = true];
  resources.common.content.Content content = 9;
  // @sanitize
  optional string data = 10 [
    (buf.validate.field).string = {max_bytes: 1000000},
    (tagger.tags) = "alias:\"data\""
  ];
  optional int32 creator_id = 11 [(buf.validate.field).int32.gt = 0];
  optional resources.users.UserShort creator = 12 [(tagger.tags) = "alias:\"creator\""];
  string creator_job = 13 [(buf.validate.field).string.max_len = 20];
  optional string creator_job_label = 14 [(buf.validate.field).string.max_len = 50];
  // @sanitize
  string state = 15 [(buf.validate.field).string.max_len = 32];
  bool closed = 16;
  bool draft = 17;
  bool public = 18;
  optional int64 template_id = 19;
  optional DocumentPin pin = 20 [(tagger.tags) = "alias:\"pin\""];
  optional WorkflowState workflow_state = 21;
  optional WorkflowUserState workflow_user = 22;
  repeated resources.file.File files = 23 [(tagger.tags) = "alias:\"files\""];
}

message DocumentShort {
  int64 id = 1;
  resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  optional int64 category_id = 5;
  optional resources.documents.Category category = 6 [(tagger.tags) = "alias:\"category\""];
  // @sanitize
  string title = 7 [(buf.validate.field).string = {
    min_len: 3
    max_len: 512
  }];
  resources.common.content.ContentType content_type = 8 [(buf.validate.field).enum.defined_only = true];
  resources.common.content.Content content = 9;
  optional int32 creator_id = 11 [(buf.validate.field).int32.gt = 0];
  optional resources.users.UserShort creator = 12 [(tagger.tags) = "alias:\"creator\""];
  string creator_job = 13 [(buf.validate.field).string.max_len = 20];
  optional string creator_job_label = 14 [(buf.validate.field).string.max_len = 50];
  // @sanitize
  string state = 15 [(buf.validate.field).string.max_len = 32];
  bool closed = 16;
  bool draft = 17;
  bool public = 18;
  optional DocumentPin pin = 20 [(tagger.tags) = "alias:\"pin\""];
  optional WorkflowState workflow_state = 21;
  optional WorkflowUserState workflow_user = 22;
}

enum DocReference {
  DOC_REFERENCE_UNSPECIFIED = 0;
  DOC_REFERENCE_LINKED = 1;
  DOC_REFERENCE_SOLVES = 2;
  DOC_REFERENCE_CLOSES = 3;
  DOC_REFERENCE_DEPRECATES = 4;
}

message DocumentReference {
  optional int64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  int64 source_document_id = 3 [(tagger.tags) = "alias:\"source_document_id\""];
  optional resources.documents.DocumentShort source_document = 4 [(tagger.tags) = "alias:\"source_document\""];
  DocReference reference = 5 [
    (buf.validate.field).enum.defined_only = true,
    (tagger.tags) = "alias:\"reference\""
  ];
  int64 target_document_id = 6 [(tagger.tags) = "alias:\"target_document_id\""];
  optional resources.documents.DocumentShort target_document = 7 [(tagger.tags) = "alias:\"target_document\""];
  optional int32 creator_id = 8 [(buf.validate.field).int32.gt = 0];
  optional resources.users.UserShort creator = 9 [(tagger.tags) = "alias:\"ref_creator\""];
}

enum DocRelation {
  DOC_RELATION_UNSPECIFIED = 0;
  DOC_RELATION_MENTIONED = 1;
  DOC_RELATION_TARGETS = 2;
  DOC_RELATION_CAUSED = 3;
}

message DocumentRelation {
  optional int64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  int64 document_id = 3;
  optional resources.documents.DocumentShort document = 4 [(tagger.tags) = "alias:\"document\""];
  int32 source_user_id = 5 [
    (buf.validate.field).int32.gt = 0,
    (tagger.tags) = "alias:\"source_user_id\""
  ];
  optional resources.users.UserShort source_user = 6 [(tagger.tags) = "alias:\"source_user\""];
  DocRelation relation = 7 [
    (buf.validate.field).enum.defined_only = true,
    (tagger.tags) = "alias:\"relation\""
  ];
  int32 target_user_id = 8 [
    (buf.validate.field).int32.gt = 0,
    (tagger.tags) = "alias:\"target_user_id\""
  ];
  optional resources.users.UserShort target_user = 9 [(tagger.tags) = "alias:\"target_user\""];
}

message WorkflowState {
  int64 document_id = 1;
  optional resources.timestamp.Timestamp next_reminder_time = 2;
  optional int32 next_reminder_count = 3;
  int32 reminder_count = 5 [(buf.validate.field).int32 = {
    gte: 1
    lte: 10
  }];
  optional resources.timestamp.Timestamp auto_close_time = 4;

  optional resources.documents.Workflow workflow = 6 [(tagger.tags) = "alias:\"workflow\""];
  optional resources.documents.DocumentShort document = 7;
}

message WorkflowUserState {
  int64 document_id = 1;
  int32 user_id = 2 [(buf.validate.field).int32.gt = 0];
  optional resources.timestamp.Timestamp manual_reminder_time = 3;
  optional string manual_reminder_message = 4 [(buf.validate.field).string.max_len = 255];
  int32 reminder_count = 5 [(buf.validate.field).int32 = {
    gte: 1
    lte: 10
  }];
  int32 max_reminder_count = 6 [(buf.validate.field).int32 = {
    gte: 1
    lte: 10
  }];

  optional resources.documents.Workflow workflow = 7 [(tagger.tags) = "alias:\"workflow\""];
  optional resources.documents.DocumentShort document = 8;
}
